remove some unneeded text

--- a/html/TEST-DROPDOWN.html
+++ b/html/TEST-DROPDOWN.html
@@ -89,7 +89,7 @@
       <label for="bug-description" class="setting">Describe the bug:</label>
       <textarea id="bug-description" placeholder="What's the issue?"></textarea>
       <button onclick="submitBugReport()" class="logout-btn">Submit Bug</button>
-      <p id="bug-report-message">Bug report submitted!</p>
+      <p id="bug-report-message"></p>
     </div>
   </div>
 
@@ -108,7 +108,7 @@
       <label for="feedback-text" class="setting">We'd love to hear your thoughts:</label>
       <textarea id="feedback-text" placeholder="Type your feedback here..."></textarea>
       <button onclick="submitFeedback()" class="logout-btn">Submit Feedback</button>
-      <p id="feedback-message">Thank you for your feedback!</p>
+      <p id="feedback-message"></p>
     </div>
   </div>
 
